# convo_sync

./: .bandit  .codecov.yml  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CODE_STANDARDS.md  PROJECT_SUMMARY.md  README.md  UPGRADE_GUIDE.md  convo_sync.py  mkdocs.yml  pixi.toml  pyproject.toml  setup.py
.github/workflows/: ci.yml  docs.yml  pr-check.yml  release.yml
convo_sync/: .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  convo_sync.py  requirements.txt  setup.py
convo_sync/src/: __init__.py  cleaners.py  converters.py
docs/: algorithm.md  contributing.md  index.md  performance-comparison.md
docs/api/: cleaners.md  converters.md
docs/getting-started/: installation.md  quickstart.md
examples/: EXAMPLES.md
src/: __init__.py  _version.py  cleaners.py  converters.py
tests/: test_code_detection.py  test_main.py
