[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "convo_sync"
version = "1.0.0"
description = "AI Conversation Data Processing Toolkit"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "cagedbird", email = "cagedbird@example.com" }]
keywords = ["conversation", "markdown", "json", "processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "black>=23.12.1",
    "isort>=5.13.2",
    "flake8>=6.1.0",
    "flake8-docstrings>=1.7.0",
    "flake8-bugbear>=23.12.2",
    "pylint>=3.0.3",
    "mypy>=1.7.1",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.5.0",
    "bandit>=1.7.5",
    "interrogate>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/cagedbird043/convo_sync"
Repository = "https://github.com/cagedbird043/convo_sync.git"
Issues = "https://github.com/cagedbird043/convo_sync/issues"

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311", "py312"]
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_glob = ["*/migrations/*"]
known_first_party = ["src"]
known_third_party = ["pytest"]

[tool.pylint.messages_control]
disable = ["C0330", "C0326", "W0212", "C0103", "R0913"]

[tool.pylint.format]
max-line-length = 120
indent-string = "    "

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "id", "x", "y", "f", "df", "ax"]

[tool.pylint.design]
max-args = 5
max-attributes = 7

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_no_return = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
